--- a/hugo.toml
+++ b/hugo.toml
@@ -9,7 +9,7 @@ logoText = "JN"
 owner = "Julkar Naim"
 designation = "Software Engineer"
 profileImage = "img/siteProfileImage.jpeg"
-email = "julkar.naim@gmail.com"
+email = "julkar.naim.cse@gmail.com"
 companyName = "Brain Station 23"
 companyUrl = "https://www.brainstation-23.com"
 
