--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,10 @@ title = "Julkar Naim's Blog"
 theme = 'revise'
 description = "Personal Blog"
 
+[services]
+[services.googleAnalytics]
+id = 'G-M6DJVZ20SY'
+
 [params]
 logoText = "JN"
 owner = "Julkar Naim"
