home and list template date formatting

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,10 @@ title = "Julkar Naim's Blog"
 theme = 'revise'
 description = "Personal Blog"
 
+[markup]
+  [markup.highlight]
+    style = 'doom-one'
+
 [services]
 [services.googleAnalytics]
 id = 'G-M6DJVZ20SY'
